# posty

./: CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
scripts/: mock-api-server.ts  mock-api.openapi.yaml  openapi-server.ts  release.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: graphql.rs  http.rs  mod.rs  openapi.rs  websocket.rs
src/components/CommandPalette/: CommandPalette.tsx
src/components/ImportModal/: ImportModal.tsx
src/components/Layout/: Layout.tsx
src/components/Modals/: CodeGeneratorModal.tsx  DiffModal.tsx  EditSpecModal.tsx  ImportModal.tsx
src/components/RequestPanel/: RequestPanel.tsx  RequestTestsEditor.test.tsx  RequestTestsEditor.tsx
src/components/ResponsePanel/: ResponsePanel.tsx
src/components/Runner/: CollectionRunnerModal.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/UpdateChecker/: UpdateChecker.tsx
src/lib/: codegen.test.ts  codegen.ts  curlParser.test.ts  curlParser.ts  diff.ts  openapi-import.test.ts  openapiImport.ts  requestAssertions.test.ts  requestAssertions.ts  requestExecution.test.ts  requestExecution.ts  runner.test.ts  runner.ts  secrets.ts
src/stores/: collectionStore.test.ts  collectionStore.ts  requestStore.test.ts  requestStore.ts  runnerStore.test.ts  runnerStore.ts  uiStore.ts  updateStore.ts
src/test/: setup.ts
src/types/: index.ts
