[package]
name = "posty"
version = "0.1.0"
description = "A fast, lightweight API client"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "posty_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
rfd = "0.15"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# Database
rusqlite = { version = "0.34", features = ["bundled"] }

# OpenAPI parsing
openapiv3 = "2.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# URL parsing
url = "2.5"

# YAML parsing for OpenAPI
serde_yaml = "0.9"

# macOS window effects
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"

[features]
default = []
